# pds-github-util

./: .buildinfo  .gitattributes  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  SECURITY.md  genindex.html  index.html  objects.inv  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.doctrees/: environment.pickle  index.doctree
.doctrees/installation/: index.doctree
.doctrees/support/: index.doctree
.doctrees/usage/: index.doctree
.github/: CODEOWNERS
.github/workflows/: pypipublish.yml  squaredown-stable-cicd.yaml  squaredown-stable.yaml  squaredown-unstable-cicd.py  squaredown-unstable-cicd.yaml  stable-cicd.yaml  trigger-dependency.yaml  unstable-cicd.yaml
_sources/: index.rst.txt
conf/: labels.yaml  labels_delete.yaml  labels_incompat.yaml  milestones_2021.yaml  projects.yaml
docs/requirements/v0.20.0-dev/: REQUIREMENTS.md
docs/requirements/v0.23.0-dev/: REQUIREMENTS.md
docs/source/: conf.py  index.rst
docs/source/installation/: index.rst
docs/source/support/: index.rst
docs/source/usage/: index.rst
installation/: index.html
pds_github_util/: MANIFEST.in  __init__.py  _version.py  maven_snapshot_release.py  python_snapshot_release.py  snapshot_release.py
pds_github_util/branches/: git_actions.py
pds_github_util/corral/: cattle_head.py  herd.py
pds_github_util/gh_pages/: build_summaries.py  root_index.py  summary.py
pds_github_util/html/: md_to_html.py
pds_github_util/issues/: RstRddReport.py  __init__.py  issues.py  move_issues.py  utils.py
pds_github_util/milestones/: milestones.py
pds_github_util/plan/: plan.py  plan.template.rst
pds_github_util/release/: _python_version.py  ldd_release.py  python_snapshot_release.py  release.py
pds_github_util/requirements/: generate_requirements.py  requirements.py
pds_github_util/tags/: tags.py
pds_github_util/tags/test/: tags_test.py
pds_github_util/test/: maven_get_version_test.py  python_get_version_test.py
pds_github_util/utils/: RstClothReferenceable.py  __init__.py  githubConnection.py  ldd_gen.py
src/pds_github_util/issues/: RstRddReport.py
src/pds_github_util/plan/: plan.template.rst
src/pds_github_util/release/: _python_version.py
src/pds_github_util/utils/: pds4_validate.py
support/: index.html
tests/corral/: .gitmodules
tests/gh_pages/: .gitmodules  build_summaries_test.py  summary_test.py
tests/releases/: test_python_get_version.py
tests/releases/data/: pom.xml
usage/: index.html
